<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/uc_method_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uc_method_button1" />

    <Button
        android:id="@+id/uc_method_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uc_method_button2" />

    <Button
        android:id="@+id/uc_method_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uc_method_button3" />

    <Button
        android:id="@+id/uc_method_button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uc_method_button4" />

    <Button
        android:id="@+id/uc_method_button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uc_method_button5" />

    <TextView
        android:id="@+id/upcall_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcall_text" />

</LinearLayout>
