<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/abi_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abi_button" />

    <Button
        android:id="@+id/env_directory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/env_directory_button" />

    <Button
        android:id="@+id/app_directory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_directory_button" />

    <Button
        android:id="@+id/classloader_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classloader_button" />

    <Button
        android:id="@+id/systemservice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/systemservice_button" />

</LinearLayout>
