<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/sp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp_button" />

    <Button
        android:id="@+id/sqlite_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button" />

    <Button
        android:id="@+id/cp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_button" />

    <Button
        android:id="@+id/file_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_button" />

</LinearLayout>
