<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_button" />

    <Button
        android:id="@+id/service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_button" />

    <Button
        android:id="@+id/contentprovider_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contentprovider_button" />

    <Button
        android:id="@+id/broadcastreceiver_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcastreceiver_button" />

</LinearLayout>
