<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ipc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipc_button" />

    <Button
        android:id="@+id/widget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_button" />

    <Button
        android:id="@+id/misc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misc_button" />

</LinearLayout>
