<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/downcall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downcall_button" />

    <Button
        android:id="@+id/downcall_onload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downcall_onload_button" />

    <Button
        android:id="@+id/upcall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downcall_button" />

    <Button
        android:id="@+id/invoke_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invoke_button" />

</LinearLayout>
